# docs

./: Cargo.toml  LICENSE  README.md  config.toml
cmd/: Cargo.toml
cmd/src/: main.rs
config/: config.toml
cpp/: README.md  deps.json
docs/: README.md
docs/cpp/: README.md
docs/cpp/edit/: Doxyfile
docs/go/: README.md
docs/go/edit/: compose.yaml
docs/go/gin/: README.md  deps.json
docs/go/gin/create/internal/api/: api.go
docs/go/gin/create/internal/db/model/: model.go
docs/javascript/: README.md
docs/javascript/nextjs/: README.md
docs/javascript/nextjs/edit/: next.config.ts  package.json
docs/javascript/tauri/: README.md
docs/javascript/tauri/nextjs/: README.md
docs/javascript/tauri/nextjs/edit/: package.json
docs/kotlin/: README.md
docs/python/: README.md
docs/python/edit/: pyproject.toml
docs/python/edit/docs/: conf.py  index.rst
docs/rust/: README.md  deps.json
fabric/: README.md
go/: README.md  deps.json
go/gin/: README.md  deps.json
javascript/: README.md  deps.json
javascript/nextjs/: README.md  deps.json
javascript/tauri/: README.md
javascript/tauri/nextjs/: deps.json
kotlin/fabric/: README.md
python/: README.md  deps.json
rust/: README.md  deps.json
src/: commands.rs  lib.rs  main.rs
src/commands/: cpp.rs  go.rs  javascript.rs  kotlin.rs  python.rs  root.rs  rust.rs  upgrade.rs  utils.rs
src/commands/go/: gin.rs
src/commands/javascript/: nextjs.rs  tauri.rs
src/commands/javascript/tauri/: nextjs.rs
src/commands/kotlin/: fabric.rs
