[package]
name = "docs"
version = "0.1.0"
authors = ["CoolTrainerEX"]
edition = "2024"
description = "Docs for my personal programming paradigms."
repository = "https://github.com/CoolTrainerEX/docs"
license = "MIT"
keywords = [
    "cpp",
    "go",
    "javascript",
    "nextjs",
    "tauri",
    "kotlin",
    "fabric",
    "python",
    "rust",
]


[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
figment = "0.10.19"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
