[package]
name = "docs"
version = "0.1.0"
authors = ["CoolTrainerEX"]
edition = "2024"
description = "Docs for my personal programming paradigms."
homepage = "https://CoolTrainerEX.github.io/docs"
repository = "https://github.com/CoolTrainerEX/docs"
license = "MIT"
keywords = [
    "cpp",
    "go",
    "javascript",
    "nextjs",
    "tauri",
    "kotlin",
    "fabric",
    "python",
    "rust",
]
categories = ["development-tools"]


[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
include_dir = "0.7.4"
indicatif = "0.18.3"
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
